[package]
name = "chromium"
version = "1.0.0"
edition = "2021"

[lib]
crate_type = ["rlib"]

[dependencies]
chromium_jni_utils = { path = "../chromium_jni_utils/" }
chromium_jni_macro = { path = "../chromium_jni_macro/" }
jni = "0.19.0"
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi"] }

[features]
gen = ["bindgen"]

[build-dependencies]
bindgen = { version = "0.69.2", optional = true }
