[package]
name = "chromium"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
chromium_jni_utils = { path = "../chromium_jni_utils/" }
chromium_jni_macro = { path = "../chromium_jni_macro/" }
jni = "0.19.0"
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi"] }

[features]
gen = ["bindgen"]

[build-dependencies]
bindgen = { version = "0.70.0", optional = true }

[lints.clippy]
missing_safety_doc = "allow"
not_unsafe_ptr_arg_deref = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
missing_transmute_annotations = "allow"