[package]
name = "chromium_jni"
version = "1.0.0"
edition = "2021"

[dependencies]
jni = "0.19.0"
chromium = { path = "../chromium/" }
chromium_swt = { path = "../chromium_swt/" }
chromium_jni_macro = { path = "../chromium_jni_macro/" }
chromium_jni_utils = { path = "../chromium_jni_utils/" }

[lib]
crate_type = ["cdylib"]

[lints.clippy]
missing_safety_doc = "allow"
not_unsafe_ptr_arg_deref = "allow"
too_many_arguments = "allow"