[package]
name = "chromium_jni_macro"
edition = "2021"
version = "1.0.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0.67", features=["full", "parsing", "proc-macro", "extra-traits", "derive", "printing", "clone-impls"], default-features = false }

[lints.clippy]
missing_safety_doc = "allow"
not_unsafe_ptr_arg_deref = "allow"
too_many_arguments = "allow"
