[package]
name = "chromium_subp"
version = "59.0.0"
authors = ["Equo <https://www.equoplatform.com/>", "Guillermo Zunino <guillez@gmail.com>"]

[[bin]]
name = "chromium_subp"
path = "src/bin/chromium_subp.rs"

[dependencies]
chromium = { path = "../chromium/" }
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi"] }
