[package]
name = "chromium_subp"
version = "101.0.0"
authors = ["Equo <https://www.equoplatform.com/>", "Guillermo Zunino <guillez@gmail.com>"]
edition = "2021"

[[bin]]
name = "chromium_subp"
path = "src/bin/chromium_subp.rs"

[dependencies]
chromium = { path = "../chromium/" }
winapi = { version = "0.3.9", features = ["winuser", "libloaderapi", "synchapi", "tlhelp32", "handleapi"] }
