[package]
name = "chromium_swt"
version = "1.0.0"
authors = ["Equo <https://www.equoplatform.com/>", "Guillermo Zunino <guillez@gmail.com>"]
edition = "2021"

[lib]
name = "chromium_swt"
crate-type = ["rlib"]
path = "src/lib.rs"

[dependencies]
chromium = { path = "../chromium/" }
chromium_subp = { path = "../chromium_subp/" }
winapi = { version = "0.3.9", features = ["winuser"] }